# Alwarsha

./: .gitlab-ci.yml  CONTRIBUTING.md  NEWS  README.md  gnome-builder.doap  meson.build  meson_options.txt
AppImge yml file/: AppImageBuilder.yml
build-aux/flatpak/: local-build.sh  org.alusus.Alwarsha.json  org.gnome.Builder.json
data/: meson.build  org.alusus.Alwarsha.desktop.in.in  org.alusus.Alwarsha.service.in
data/appdata/: meson.build  org.alusus.Alwarsha.appdata.xml.in
data/fonts/: AlususMono.ttx  meson.build
data/gsettings/: meson.build  org.alusus.alwarsha.alususnet.gschema.xml  org.alusus.alwarsha.build.gschema.xml  org.alusus.alwarsha.code-insight.gschema.xml.in  org.alusus.alwarsha.editor.gschema.xml  org.alusus.alwarsha.editor.language.gschema.xml  org.alusus.alwarsha.extension-type.gschema.xml  org.alusus.alwarsha.gschema.xml  org.alusus.alwarsha.plugin.gschema.xml  org.alusus.alwarsha.project-tree.gschema.xml  org.alusus.alwarsha.project.gschema.xml  org.alusus.alwarsha.terminal.gschema.xml  org.alusus.alwarsha.workbench.gschema.xml  org.gnome.builder.editor.gschema.xml  org.gnome.builder.editor.language.gschema.xml  org.gnome.builder.terminal.gschema.xml  org.gnome.builder.workbench.gschema.xml
data/icons/: meson.build
data/icons/hicolor/: icons.gresource.xml  render-symbolic.py
data/language-specs/: alusus.lang  meson.build
data/style-schemes/: alusus_dark_style.xml  alusus_light_style.xml  meson.build
doc/: appimage-build-instructions.txt
doc/help/: installation.rst  troubleshooting.rst
doc/help/_static/: theme_overrides.css
doc/help/howto/: indentation.rst
doc/help/plugins/: preferences.rst
doc/sdk/: libide.toml.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  meson.build
src/: main.c  meson.build
src/libide/: meson.build
src/libide/code/: ide-buffer.c  ide-gsettings-file-settings.c  ide-highlight-engine.c  ide-language-defaults.c  libide-code.gresource.xml  meson.build
src/libide/core/: ide-context.c  ide-global.c  ide-notifications.c  ide-settings.c  meson.build
src/libide/debugger/: ide-debug-manager.c
src/libide/editor/: ide-editor-page-settings.c  ide-editor-page-shortcuts.c  ide-editor-page.c  ide-editor-page.ui  ide-editor-search-bar-shortcuts.c  ide-editor-sidebar.c  ide-editor-surface-shortcuts.c  ide-editor-surface.c  ide-editor-workspace.ui
src/libide/foundry/: ide-build-manager.c  ide-config.c  ide-device-manager.c  ide-pipeline-stage-transfer.c  ide-pipeline.c  ide-run-manager.c  ide-runtime.c  meson.build
src/libide/greeter/: ide-clone-surface.c  ide-greeter-row.c  ide-greeter-workspace-shortcuts.c  ide-greeter-workspace.c  libide-greeter.gresource.xml
src/libide/gui/: ide-application-actions.c  ide-application-color.c  ide-application-command-line.c  ide-application-plugins.c  ide-application-private.h  ide-application.c  ide-frame-actions.c  ide-frame-shortcuts.c  ide-frame.c  ide-frame.h  ide-header-bar-shortcuts.c  ide-header-bar.h  ide-header-bar.ui  ide-keybindings.c  ide-preferences-builtin.c  ide-primary-workspace-actions.c  ide-primary-workspace.c  ide-primary-workspace.ui  ide-run-button.c  ide-run-button.ui  ide-search-button.c  ide-session.c  ide-shortcuts-window.ui  ide-window-settings.c  ide-workbench.c  ide-worker-manager.c  meson.build
src/libide/io/: libide-io.h  meson.build
src/libide/lsp/: ide-lsp-code-action-provider.h  meson.build
src/libide/plugins/: ide-extension-adapter.c  ide-extension-set-adapter.c  ide-extension-util.c
src/libide/projects/: ide-projects-global.c
src/libide/search/: ide-search-result.c
src/libide/sourceview/: ide-completion-list-box-row.c  ide-completion-window.c  ide-snippet-storage.c  ide-source-view-shortcuts.c  ide-source-view.c
src/libide/terminal/: ide-terminal-workspace.ui  ide-terminal.c
src/libide/themes/: libide-themes.gresource.xml
src/plugins/: meson.build
src/plugins/alusus/: alusus.gresource.xml  alusus.plugin  alusus_plugin.py  meson.build
src/plugins/alusus-templates/: alusus-templates.gresource.xml  alusus-templates.plugin  alusus_templates.py  meson.build
src/plugins/alusus-templates/resources/src/: AlususBuilder  alususbuilder  main.alusus
src/plugins/alusus/resources/src/: main.alusus
src/plugins/alusus/resources/الشفرة/: بداية.أسس
src/plugins/auto-save/: gbp-auto-save-buffer-addin.c
src/plugins/beautifier/: beautifier.gresource.xml  gb-beautifier-config.c  gb-beautifier-editor-addin.c
src/plugins/buildui/: gbp-buildui-config-surface.c  gbp-buildui-tree-addin.c  gbp-buildui-workspace-addin.c
src/plugins/clang/: ide-clang-client.c  ide-clang-completion-item.c  ide-clang-preferences-addin.c  meson.build  org.alusus.alwarsha.clang.gschema.xml
src/plugins/clang-format/: gb-clang-format-buffer-addin.c
src/plugins/code-index/: gbp-code-index-service.c
src/plugins/color-picker/: gb-color-picker-prefs.c  meson.build
src/plugins/command-bar/: gbp-command-bar-shortcuts.c
src/plugins/comment-code/: gbp-comment-code-editor-page-addin.c
src/plugins/copyright/: copyright_plugin.py  meson.build  org.alusus.alwarsha.plugins.copyright.gschema.xml
src/plugins/create-project/: gbp-create-project-surface.c  gbp-create-project-surface.ui
src/plugins/ctags/: ide-ctags-builder.c  ide-ctags-completion-provider.c  ide-ctags-preferences-addin.c
src/plugins/debuggerui/: debuggerui.plugin  ide-debugger-breakpoints-view.c  ide-debugger-editor-addin.c
src/plugins/devhelp/: devhelp.gresource.xml  gbp-devhelp-page.c  gbp-devhelp-page.h  gbp-devhelp-search.c
src/plugins/deviceui/: gbp-deviceui-workspace-addin.c
src/plugins/editor/: default.css  editor.gresource.xml  gbp-editor-session-addin.c  gbp-editor-workspace-addin.c
src/plugins/emacs/: gbp-emacs-preferences-addin.c
src/plugins/eslint/: eslint_plugin.py  meson.build  org.alusus.alwarsha.plugins.eslint.gschema.xml
src/plugins/flatpak/: gbp-flatpak-application-addin.c  gbp-flatpak-client.c  gbp-flatpak-install-dialog.ui  gbp-flatpak-runtime-provider.c  gbp-flatpak-runtime.c  gbp-flatpak-subprocess-launcher.c  (+1 more)
src/tests/: test-gfile.c
(+86 files in other folders)
