option('tracing', type: 'boolean', value: false, description: 'Enable tracing of internals for troubleshooting Builder')
option('profiling', type: 'boolean', value: false, description: 'Enable profiling of the Builder codebase')
option('tcmalloc', type: 'boolean', value: false, description: 'Use tcmalloc for dynamic allocations')

option('with_safe_path', type: 'string', value: '', description: 'PATH variable to run build commands (default: platform-specific)')

option('gnome_sdk_version', type: 'string', value: 'master', description: 'The GNOME SDK release to use for templates')

option('channel',
          type: 'combo',
       choices: [ 'other', 'flatpak-stable', 'flatpak-beta', 'flatpak-nightly' ],
   description: 'The distribution channel for Builder',
)

option('help', type: 'boolean', value: false)
option('docs', type: 'boolean', value: false)

option('network_tests', type: 'boolean', value: true, description: 'Allow networking in unit-tests')

option('ctags_path', type: 'string', value: '')

option('plugin_autotools', type: 'boolean', value: false)
option('plugin_beautifier', type: 'boolean', value: false)
option('plugin_c_pack', type: 'boolean', value: false)
option('plugin_cargo', type: 'boolean', value: false)
option('plugin_clang', type: 'boolean', value: false)
option('plugin_cmake', type: 'boolean', value: false)
option('plugin_codespell', type: 'boolean', value: false)
option('plugin_code_index', type: 'boolean', value: false)
option('plugin_color_picker', type: 'boolean', value: false)
option('plugin_copyright', type: 'boolean', value: false)
option('plugin_ctags', type: 'boolean', value: false)
option('plugin_devhelp', type: 'boolean', value: false)
option('plugin_deviced', type: 'boolean', value: false)
option('plugin_dspy', type: 'boolean', value: false)
option('plugin_editorconfig', type: 'boolean', value: false)
option('plugin_eslint', type: 'boolean', value: false)
option('plugin_file_search', type: 'boolean', value: false)
option('plugin_flatpak', type: 'boolean', value: false)
option('plugin_gdb', type: 'boolean', value: false)
option('plugin_gdiagnose', type: 'boolean', value: false)
option('plugin_gettext', type: 'boolean', value: false)
option('plugin_git', type: 'boolean', value: false)
option('plugin_gjs_symbols', type: 'boolean', value: false)
option('plugin_glade', type: 'boolean', value: false)
option('plugin_gnome_code_assistance', type: 'boolean', value: false)
option('plugin_go_langserv', type: 'boolean', value: false)
option('plugin_gradle', type: 'boolean', value: false)
option('plugin_grep', type: 'boolean', value: false)
option('plugin_gvls', type: 'boolean', value: false)
option('plugin_html_completion', type: 'boolean', value: false)
option('plugin_html_preview', type: 'boolean', value: false)
option('plugin_jedi_language_server', type: 'boolean', value: false)
option('plugin_jhbuild', type: 'boolean', value: false)
option('plugin_make', type: 'boolean', value: false)
option('plugin_maven', type: 'boolean', value: false)
option('plugin_meson', type: 'boolean', value: false)
option('plugin_modelines', type: 'boolean', value: false)
option('plugin_mono', type: 'boolean', value: false)
option('plugin_newcomers', type: 'boolean', value: false)
option('plugin_notification', type: 'boolean', value: false)
option('plugin_npm', type: 'boolean', value: false)
option('plugin_phpize', type: 'boolean', value: false)
option('plugin_podman', type: 'boolean', value: false)
option('plugin_python_pack', type: 'boolean', value: false)
option('plugin_qemu', type: 'boolean', value: false)
option('plugin_quick_highlight', type: 'boolean', value: false)
option('plugin_retab', type: 'boolean', value: false)
option('plugin_rls', type: 'boolean', value: false)
option('plugin_rust_analyzer', type: 'boolean', value: false)
option('plugin_shellcmd', type: 'boolean', value: false)
option('plugin_spellcheck', type: 'boolean', value: false)
option('plugin_stylelint', type: 'boolean', value: false)
option('plugin_sysprof', type: 'boolean', value: false)
option('plugin_sysroot', type: 'boolean', value: false)
option('plugin_todo', type: 'boolean', value: false)
option('plugin_update_manager', type: 'boolean', value: false)
option('plugin_vala', type: 'boolean', value: false)
option('plugin_vagrant', type: 'boolean', value: false)
option('plugin_valgrind', type: 'boolean', value: false)
option('plugin_vls', type: 'boolean', value: false)
option('plugin_waf', type: 'boolean', value: false)
option('plugin_words', type: 'boolean', value: false)
option('plugin_xml_pack', type: 'boolean', value: false)
